# zouma_sec_version

docs/: Version_V2.1.0.txt  存放文档文件夹.txt  所有资料汇总.txt
driver/: Makefile  scp_send_all.sh
driver/IPS_ST7789_Driver/: IPS_ST7789_dev.c  IPS_ST7789_dri.c  Makefile
driver/IPS_ST7789_Driver/inc/: IPS_ST7789_dri.h  hw_gpio.h
driver/IPS_ST7789_Driver/ko/: IPS_ST7789_dev.ko  IPS_ST7789_dri.ko
driver/TFT18_Driver/: Makefile  TFT18_dev.c  TFT18_dri.c
driver/TFT18_Driver/inc/: TFT18_dri.h  hw_gpio.h
driver/TFT18_Driver/ko/: TFT18_dev.ko  TFT18_dri.ko
driver/i2c_all_device/: Makefile  lq_i2c_all_device.c
driver/i2c_all_device/ko/: lq_i2c_all_dev.ko
driver/i2c_icm42688_driver/: Makefile  lq_i2c_icm42688_driver.c
driver/i2c_icm42688_driver/inc/: lq_drv_common.h  lq_i2c_read_write_drv.h  lq_icm42688_drv.h
driver/i2c_icm42688_driver/ko/: lq_i2c_icm42688_drv.ko
driver/i2c_icm42688_driver/src/: lq_icm42688_drv.c
driver/i2c_lsm6dsr_driver/: Makefile  lq_i2c_lsm6dsr_driver.c
driver/i2c_lsm6dsr_driver/inc/: lq_drv_common.h  lq_lsm6dsr_drv.h
driver/i2c_lsm6dsr_driver/ko/: lq_i2c_lsm6dsr_drv.ko
driver/i2c_lsm6dsr_driver/src/: lq_i2c_read_write_drv.c  lq_lsm6dsr_drv.c
driver/i2c_mpu6050_driver/: Makefile  lq_i2c_mpu6050_driver.c
driver/i2c_mpu6050_driver/inc/: lq_drv_common.h  lq_mpu6050_drv.h
driver/i2c_vl53l0x_driver/: Makefile  lq_i2c_vl53l0x_driver.c  scp_send.sh
example/: 例程文件夹.txt
example/inc/: det_diff_pd_controller.hpp  image.hpp  lq_all_demo.hpp  motor_control.hpp
example/src/: 01_lq_gpio_basic_demo.cpp  02_lq_pwm_demo.cpp  03_lq_gtim_pwm_demo.cpp  04_lq_atim_pwm_demo.cpp  05_lq_encoder_pwm_demo.cpp  06_lq_canfd_demo.cpp  07_lq_ncnn_demo.cpp  08_lq_ips20_demo.cpp  09_lq_mpu6050_demo.cpp  10_lq_lsm6dsr_demo.cpp  11_lq_vl53l0x_demo.cpp  12_lq_udp_img_trans_demo.cpp  13_lq_udp_wavefrom_demo.cpp  14_lq_icm42688_demo.cpp  15_lq_ntp_demo.cpp  16_lq_timer_demo.cpp  17_lq_module_load_demo.cpp  18_lq_ips20_show_img_demo.cpp  19_lq_http_img_trans_demo.cpp  20_lq_uart_demo.cpp
example/xcode/: README.md  det_diff_pd_controller.cpp  image.cpp  motor_control.cpp  x_test_demo.cpp
libraries/app/: lq_app_inc.hpp  lq_i2c_vl53l0x.cpp  lq_i2c_vl53l0x.hpp
libraries/common/: 全库通用定义.txt
main/: CMakeLists.txt  build.sh  clean_project.sh  main.cpp  main.hpp  toolchain_path.cmake  更新日志.md
main/scripts/: board_operations.sh  build_project.sh  deps_check.sh  deps_process.sh  toolchain_setup.sh  utils.sh
tools/LQ_Dep_libs/: ncnn_install.tar.xz
vmlinuz/: 必看.txt
(+106 files in other folders)
